gulp config: haml, sass

--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -1,5 +1,4 @@
-@charset "UTF-8"
-@import app/stylesheets/sass/base
+@import app/stylesheets/settings/base
 
 .app-test-bg
-  background: #aaa
+  background: #777
