login page styles

--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -23,10 +23,8 @@
 @import utilities/utils
 @import utilities/responsive
 
-@import settings/messages
-@import settings/chat-list
 @import settings/forms
 
 @import modules/buttons
-
+@import modules/login
 
