--- a/app/stylesheets/settings/_design.sass
+++ b/app/stylesheets/settings/_design.sass
@@ -1,52 +1,6 @@
-$design-layout-width: 1359px
-$design-left-menu-width: 233px
-$design-secondary-sidebar-width: 263px
-$design-content-width: 612px
-$design-right-menu-width: 251px
+// place here design-related dimensions
 
 $design-layout-width-tablet: 1024px
-$design-left-menu-width-tablet: 78px
-$design-secondary-sidebar-width-tablet: 263px
-$design-content-width-tablet: 604px
-$design-right-menu-width-tablet: 77px
-
 $tablet-width: $design-layout-width-tablet
 $desktop-width-min: $design-layout-width-tablet + 1px
 
-
-// Layout
-
-//$left-sidebar-width: percentage( $design-left-menu-width / $design-layout-width )
-//$left-sidebar-width-fixed: ($left-sidebar-width/100%) * $tablet-width
-$left-sidebar-width: $design-left-menu-width
-$left-sidebar-width-fixed: $design-left-menu-width
-
-//$secondary-sidebar-width: percentage( $design-secondary-sidebar-width / $design-layout-width )
-//$secondary-sidebar-width-fixed: $design-secondary-sidebar-width
-$secondary-sidebar-width: $design-secondary-sidebar-width
-$secondary-sidebar-width-fixed: $design-secondary-sidebar-width
-
-$right-sidebar-width: percentage( $design-right-menu-width / $design-layout-width )
-$right-sidebar-width-fixed: $design-right-menu-width
-
-$main-content-width: percentage( $design-content-width / $design-layout-width )
-$main-content-width-fixed: $design-content-width
-
-
-// Layout for tablets
-
-//$left-sidebar-width-tablet: percentage( $design-left-menu-width-tablet / $design-layout-width-tablet )
-//$left-sidebar-width-tablet-fixed: $design-left-menu-width-tablet
-$left-sidebar-width-tablet: $design-left-menu-width-tablet
-$left-sidebar-width-tablet-fixed: $design-left-menu-width-tablet
-
-//$secondary-sidebar-width-tablet: percentage( $design-secondary-sidebar-width-tablet / $design-layout-width-tablet )
-//$secondary-sidebar-width-tablet-fixed: $design-secondary-sidebar-width-tablet
-$secondary-sidebar-width-tablet: $design-secondary-sidebar-width-tablet
-$secondary-sidebar-width-tablet-fixed: $design-secondary-sidebar-width-tablet
-
-$right-sidebar-width-tablet: percentage( $design-right-menu-width-tablet / $design-layout-width-tablet )
-$right-sidebar-width-tablet-fixed: $design-right-menu-width-tablet
-
-$main-content-width-tablet: percentage( $design-content-width-tablet / $design-layout-width-tablet )
-$main-content-width-tablet-fixed: $design-content-width-tablet
