--- a/app/stylesheets/settings/_variables.sass
+++ b/app/stylesheets/settings/_variables.sass
@@ -1,33 +1,34 @@
 $images-path: "../images"
 
 $gray-darker:            lighten(#000, 10%)
-$gray-dark:              lighten(#000, 20%)
+$gray-dark:              lighten(#000, 30%)
 $gray:                   lighten(#000, 40%)
 $gray-light:             lighten(#000, 60%)
 $gray-lighter:           lighten(#000, 90%)
 $gray-lightest:          lighten(#000, 95%)
 
-$brand-color: #38b0aa
-$brand-color-light: #96f6f1
-$brand-color-dark: #1d6662
-$line-color: #e6ecf2
-
-$blue: #238dd8
-$blue-dark: #0b629f
+$blue: #009BFF
+$blue-dark: darken($blue, 20%)
 $red: #f6584f
-$green: #9cd833
+$green: #57CB6A
 $orange: #ffae00
+$yellow: #FFD400
 $purple: rgb(158, 0, 93)
+
+$brand-color: $yellow
+$brand-color-light: lighten($yellow, 10%)
+$brand-color-dark: darken($yellow, 10%)
+$line-color: $gray-lightest
 
 $text-color: lighten($gray-dark, 10%)
 $text-color-dark: $gray-darker
-$text-color-light: #677371
-$text-color-lighter: #afb7c0
+$text-color-light: lighten($text-color, 10%)
+$text-color-lighter: lighten($text-color, 20%)
 
 $link-color: $gray-dark
-$link-color-hover: $brand-color
+$link-color-hover: $blue
 $link-hover-color: $link-color-hover
-$link-color-hover-light: lighten($brand-color, 30%)
+$link-color-hover-light: lighten($link-color-hover, 30%)
 
 $border-radius-base: 3px
 $input-border-radius: 0
