--- a/app/index.haml
+++ b/app/index.haml
@@ -7,6 +7,9 @@
     %meta{:content => "width=device-width, initial-scale=1, user-scalable=no", :name => "viewport"}
     %link{:href => "stylesheets/app.css", :rel => "stylesheet"}
   %body
+    .navbar-transparent
+      .container
+        .login__navbar-logo
     .login__content.login__content--fullscreen
       .login__block
         -#.alert.alert-danger
