--- a/app/stylesheets/settings/_variables.sass
+++ b/app/stylesheets/settings/_variables.sass
@@ -20,7 +20,7 @@ $brand-color-light: lighten($yellow, 10%)
 $brand-color-dark: darken($yellow, 10%)
 $line-color: $gray-lightest
 
-$text-color: lighten($gray-dark, 10%)
+$text-color: $gray-darker
 $text-color-dark: $gray-darker
 $text-color-light: lighten($text-color, 10%)
 $text-color-lighter: lighten($text-color, 20%)
