--- a/app/stylesheets/modules/_login.sass
+++ b/app/stylesheets/modules/_login.sass
@@ -1,6 +1,6 @@
-$login-block-width: 420px
-$login-logo-width: 58px
-$login-logo-height: 48px
+$login-form-width: 420px
+$login-logo-width: 195px
+$login-logo-height: 37px
 
 .login__content
   background: $yellow
@@ -13,17 +13,34 @@ $login-logo-height: 48px
     width: 100%
     height: 100%
     overflow: auto
+    z-index: 10
 
 .login__block
   display: inline-block
-  width: $login-block-width
   +center-block-content
+
+
+.login__navbar-logo
+  display: inline-block
+  width: $login-logo-width
+  height: $login-logo-height
+  margin:
+    top: $login-logo-height
+    bottom: $block-padding*0.75
+  background:
+    repeat: no-repeat
+    size: 100% auto
+    image: url('../images/logo.svg')
+
 
 .login__form
   background: #fff
+  width: $login-form-width
   margin:
     top: $block-padding*0.75
     bottom: $block-padding*2
+    left: auto
+    right: auto
 
 .login__form-header
   padding: $block-padding*1.5
