--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -10,7 +10,7 @@
 @import app/bower_components/compass-mixins/lib/compass/typography/lists/horizontal-list
 @import app/bower_components/compass-mixins/lib/compass/support
 @import app/bower_components/compass-mixins/lib/compass/css3
-//@import app/bower_components/font-awesome/scss/font-awesome
+@import app/bower_components/font-awesome/scss/font-awesome
 
 @import settings/typography
 
@@ -18,7 +18,6 @@
 @import settings/layout-width
 @import settings/links
 @import settings/icons
-@import settings/fonts/flowhealth
 
 @import utilities/utils
 @import utilities/responsive
@@ -28,4 +27,5 @@
 @import modules/buttons
 @import modules/login
 @import modules/navbar
-
+@import modules/left-sidebar
+@import modules/orders
