--- a/app/stylesheets/settings/_forms.sass
+++ b/app/stylesheets/settings/_forms.sass
@@ -18,6 +18,7 @@
       right: none
       bottom: 1px solid $line-color
     +box-shadow(none)
+    +border-radius(0)
     background: none
     outline: none
 
@@ -173,3 +174,6 @@ input[type="radio"]
   &:focus
     outline: none
 
+
+input[type="search"]
+  +border-radius(30px)
