--- a/app/stylesheets/settings/_design.sass
+++ b/app/stylesheets/settings/_design.sass
@@ -4,3 +4,5 @@ $design-layout-width-tablet: 1024px
 $tablet-width: $design-layout-width-tablet
 $desktop-width-min: $design-layout-width-tablet + 1px
 
+$left-sidebar-width: 116px
+
