--- a/app/stylesheets/settings/_layout.sass
+++ b/app/stylesheets/settings/_layout.sass
@@ -29,3 +29,21 @@ body
   height: 100%
   @extend %block-padding
 
+.app-left-sidebar,
+.app-main-content,
+  @extend %app-fixed-block
+
+
+.app-left-sidebar
+  left: 0
+  width: $left-sidebar-width
+  overflow:
+    y: auto
+  z-index: $left-sidebar-z-index
+
+.app-main-content
+  width: auto
+  left: $left-sidebar-width
+  right: 0
+  overflow:
+    y: auto
