--- a/app/stylesheets/settings/_variables.sass
+++ b/app/stylesheets/settings/_variables.sass
@@ -30,8 +30,8 @@ $link-color-hover: $blue
 $link-hover-color: $link-color-hover
 $link-color-hover-light: lighten($link-color-hover, 30%)
 
-$border-radius-base: 3px
-$input-border-radius: 0
+$border-radius-base: 4px
+$input-border-radius: 4px
 $border-radius-large: $border-radius-base
 $border-radius-large: $border-radius-base
 
