--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -6,10 +6,11 @@
 @import settings/fonts
 @import app/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap
 
-@import app/bower_components/compass-mixins/lib/compass/typography/links
-@import app/bower_components/compass-mixins/lib/compass/typography/lists/horizontal-list
-@import app/bower_components/compass-mixins/lib/compass/support
+//@import app/bower_components/compass-mixins/lib/compass/typography/links
+//@import app/bower_components/compass-mixins/lib/compass/typography/lists/horizontal-list
+//@import app/bower_components/compass-mixins/lib/compass/support
 @import app/bower_components/compass-mixins/lib/compass/css3
+@import app/bower_components/compass-mixins/lib/compass/typography/links/link-colors
 @import app/bower_components/font-awesome/scss/font-awesome
 
 @import settings/typography
