--- a/app/stylesheets/modules/_buttons.sass
+++ b/app/stylesheets/modules/_buttons.sass
@@ -78,7 +78,7 @@
   width: 35px
   height: 35px
   line-height: 40px
-  +border-radius(35px/1.4)
+  border-radius: 35px/1.4
   border: 1px solid darken($line-color, 10%)
   //padding: (35px - $font-size-base)/2 0
   text-align: center
