--- a/app/stylesheets/modules/_login.sass
+++ b/app/stylesheets/modules/_login.sass
@@ -87,7 +87,7 @@ input
   @extend .btn
   @extend .btn-lg
   @extend .btn-block
-  +border-radius(0)
+  border-radius: 0
   @extend %plain-input-base
   @extend .btn-gray-dark
 
