--- a/app/stylesheets/modules/_orders.sass
+++ b/app/stylesheets/modules/_orders.sass
@@ -46,7 +46,7 @@ $order-status-bullet-size: 10px
   display: inline-block
   width: $order-status-bullet-size
   height: $order-status-bullet-size
-  +border-radius(100%)
+  border-radius: 100%
   background-color: $gray-lighter
   margin-right: 3px
 
