--- a/app/stylesheets/settings/_mixins.sass
+++ b/app/stylesheets/settings/_mixins.sass
@@ -1,3 +1,8 @@
+=appearance($app)
+  -moz-appearance: $app
+  -webkit-appearance: $app
+  appearance: $app
+
 =antialiased
   -webkit-font-smoothing: antialiased
 
