--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -22,6 +22,7 @@
 @import settings/forms
 
 @import modules/buttons
+@import modules/modal
 @import modules/login
 @import modules/navbar
 @import modules/left-sidebar
