--- a/app/stylesheets/settings/_fonts.sass
+++ b/app/stylesheets/settings/_fonts.sass
@@ -1,4 +1,4 @@
-$font-family-sans-serif:  "Univers", "Helvetica Neue", Helvetica, Arial, sans-serif
+$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif
 $font-family-base:        $font-family-sans-serif
 
 $font-size-base:          14px
