--- a/app/stylesheets/modules/_login.sass
+++ b/app/stylesheets/modules/_login.sass
@@ -6,14 +6,14 @@ $login-logo-height: 37px
   background: $yellow
   +center-block-container
 
-  &--fullscreen
-    position: fixed
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    overflow: auto
-    z-index: 10
+.login__content--fullscreen
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  overflow: auto
+  z-index: 10
 
 .login__block
   display: inline-block
