signup page feedback fixes

--- a/app/index.haml
+++ b/app/index.haml
@@ -9,7 +9,8 @@
   %body
     .navbar-transparent
       .container
-        .login__navbar-logo
+        .login__navbar-logo-block
+          .login__navbar-logo
     .login__content.login__content--fullscreen
       .login__block
         -#.alert.alert-danger
