--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -12,7 +12,10 @@
 @import settings/typography
 
 @import settings/layout
-@import settings/layout-width
+
+// turns off responsive layouts:
+// @import settings/layout-width
+
 @import settings/links
 @import settings/icons
 
