--- a/app/stylesheets/settings/_variables.sass
+++ b/app/stylesheets/settings/_variables.sass
@@ -1,6 +1,6 @@
 $images-path: "../images"
 
-$gray-darker:            lighten(#000, 10%)
+$gray-darker:            lighten(#000, 17%)
 $gray-dark:              lighten(#000, 30%)
 $gray:                   lighten(#000, 40%)
 $gray-light:             lighten(#000, 60%)
@@ -71,6 +71,9 @@ $navbar-default-link-active-color:         $brand-color
 $navbar-default-link-active-bg:            transparent
 
 $hr-border: $gray-lighter
+
+
+$input-background-inactive: rgba(#fff, 0.85)
 
 $left-sidebar-z-index: 300
 $secondary-sidebar-search-z-index: 100
