--- a/app/stylesheets/modules/_orders.sass
+++ b/app/stylesheets/modules/_orders.sass
@@ -1,5 +1,23 @@
 $order-status-bullet-size: 10px
 
+%order__status-btn
+  @extend .btn
+  @extend .btn-large
+  border-radius: 0
+  +antialiased
+  &, &:hover, &:focus
+    color: #fff
+  font-weight: bold
+
+%order__status-dropdown-btn
+  padding: $grid-gutter-width/2
+  margin: 0
+  display: block
+  font-weight: bold
+  &, &:hover, &:focus
+    color: #fff
+
+
 .orders-list__list
   margin-top: $grid-gutter-width
 
@@ -23,7 +41,7 @@ $order-status-bullet-size: 10px
         top: none
         bottom: 1px solid $line-color
       &.orders-list__table-status
-        padding: 15px 10px
+        padding: 0
 
 .orders-list__table-header
   border-bottom: 1px solid $line-color
@@ -37,11 +55,22 @@ $order-status-bullet-size: 10px
 .orders-list__table-location,
 .orders-list__table-time
   color: $gray-light
+  font-size: 14px
+
+@media screen and (max-width: $screen-sm-max)
+  .orders-list__table-status,
+  .orders-list__table-header-cell-status
+    display: none
 
 .orders-list__table-status
   color: #fff
   text-align: center
   background-color: $gray-light
+
+.orders-list__table-status-btn
+  display: block
+  padding: 15px 10px
+
 
 .order-status-bullet
   display: inline-block
@@ -60,7 +89,9 @@ $order-status-bullet-size: 10px
     background-color: nth($c,2)
   .orders-list__modal-btn-#{nth($c,1)}
     &,
-    .dropdown-menu.orders-list__modal-dropdown-menu > li > &
+    .dropdown-menu.orders-list__dropdown-menu > li > &,
+    .dropdown-menu.orders-list__status-menu > li > &,
+    .orders-list__table-status-btn-#{nth($c,1)}
       background-color: nth($c,2)
       &:hover, &:focus
         background-color: darken(nth($c,2), 20%)
@@ -70,37 +101,51 @@ $order-status-bullet-size: 10px
   cursor: pointer
   +transition(background 0.2s ease)
   &:hover
-    background-color: $gray-lighter
+    background-color: $gray-lightest
 
 .orders-list__modal-btn
-  @extend .btn
-  @extend .btn-large
-  border-radius: 0
+  @extend %order__status-btn
   margin: - $grid-gutter-width/2
   padding: $grid-gutter-width/2
-  +antialiased
-  &, &:hover, &:focus
-    color: #fff
-  font-weight: bold
 
-.dropdown-menu.orders-list__modal-dropdown-menu
-  padding: 0
-  margin:
-    top: $grid-gutter-width/2 - 1px
-    left: - $grid-gutter-width/2 - 1px
-  & > li
+.orders-list__table-status-btn
+  @extend %order__status-btn
+
+.dropdown-menu
+  &.orders-list__dropdown-menu,
+  &.orders-list__status-menu
     padding: 0
-    margin: 0
-    & > a
-      &.orders-list__modal-btn
-        padding: $grid-gutter-width/2
-        margin: 0
-        display: block
-        font-weight: bold
-        &, &:hover, &:focus
-          color: #fff
+    margin:
+      top: $grid-gutter-width/2 - 1px
+      left: - $grid-gutter-width/2 - 1px
+    & > li
+      padding: 0
+      margin: 0
+      & > a
+        &.orders-list__modal-btn
+          @extend %order__status-dropdown-btn
+
+.dropdown-menu.orders-list__status-menu
+  margin:
+    top: 0
+    left: 0
 
 .order-products__list-item-cost
   font:
     weight: bold
     size: $font-size-larger
+
+
+
+.modal.orders-modal
+  text-align: center
+  &:before
+    display: inline-block
+    vertical-align: middle
+    content: " "
+    height: 100%
+
+  .modal-dialog
+    display: inline-block
+    text-align: left
+    vertical-align: middle
