--- a/app/index.haml
+++ b/app/index.haml
@@ -1,11 +1,7 @@
 !!! 5
 %html
   %head
-    %meta{:charset => "utf-8"}
-    %title Kiosk
-    %meta{:content => "", :name => "description"}
-    %meta{:content => "width=device-width, initial-scale=1, user-scalable=no", :name => "viewport"}
-    %link{:href => "stylesheets/app.css", :rel => "stylesheet"}
+    @@include('./shared/_head.haml')
   %body
     .navbar-transparent
       .container
