--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -26,6 +26,7 @@
 
 @import modules/buttons
 @import modules/modal
+@import modules/alerts
 @import modules/login
 @import modules/navbar
 @import modules/left-sidebar
