--- a/app/index.haml
+++ b/app/index.haml
@@ -10,16 +10,11 @@
     .login__content.login__content--fullscreen
       .login__block
         -#.alert.alert-danger
-        %form.login__form
-          .login__form-header Создание магазина
-          %input.login__form-input{:placeholder => "Введите название магазина", :required => "", :type => "text"}
-          %input.login__form-input{:placeholder => "Емэйл", :required => "", :type => "email"}
-          %input.login__form-input{:placeholder => "Придумайте пароль", :required => "", :type => "password"}
-          .login__form-actions
-            %button.login__form-submit-btn Создать магазин
-
-        %p.color-text-light
-          Уже есть магазин?
-          %a{href: '#/registration'}
-            %strong Войти
+        .login__form
+          - pages = ['signup.html', 'login.html', 'reset_password.html', 'orders.html']
+          - for page of pages
+            - page = pages[page]
+            %h3
+              %a{href: "#{page}"}
+                = page
 
