--- a/app/reset_password.haml
+++ b/app/reset_password.haml
@@ -6,7 +6,7 @@
     .navbar-transparent
       .container
         .login__navbar-logo-block
-          .login__navbar-logo
+          %a.login__navbar-logo{href: 'index.html'}
     .login__content.login__content--fullscreen
       .login__block
         %form.login__form
