--- a/app/stylesheets/modules/_login.sass
+++ b/app/stylesheets/modules/_login.sass
@@ -95,6 +95,9 @@ input
   &.login__form-input--single
     @extend %plain-input__input--single
 
+  &.login__form-input--error
+    @extend .plain-input__input--error
+
 .login__form-submit-btn
   @extend .btn
   @extend .btn-lg
