minor sass fixes

--- a/app/stylesheets/modules/_login.sass
+++ b/app/stylesheets/modules/_login.sass
@@ -34,7 +34,7 @@ $login-logo-height: 37px
   background:
     repeat: no-repeat
     size: 100% auto
-    image: url('../images/logo.svg')
+    image: url("#{$images-path}/logo.svg")
   +breakpoint('phone-landscape')
     width: $login-logo-width/2
     height: $login-logo-width/2
