--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -1,3 +1,5 @@
+@charset "UTF-8"
+
 @import app/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables
 @import app/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins
 @import settings/design
